tests/eval_array_index_addr_oob_bad.hop
fn main() {
	const limit = 4
	var flags [bool limit - 2]
	index := 0

	index = limit - 2
	flags[index] = true
}
